<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">"Couldn't open the page because the URL is invalid."</string>
    <string name="httpErrorUnsupportedScheme">"The protocol isn't supported."</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;Untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">"Can't play this video."</string>
    <string name="VideoView_error_title">Video problem</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">"This video isn't valid for streaming to this device."</string>
    <string name="selectTextMode">Select text</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="widget_default_package_name" />
    <string name="widget_default_class_name" />
    <string name="default_wallpaper_component">@null</string>
    <string name="config_geofenceProvider">com.qualcomm.services.location</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="db_default_journal_mode">PERSIST</string>
    <string name="db_default_sync_mode">FULL</string>
    <string name="db_wal_sync_mode">FULL</string>
    <string name="config_useragentprofile_url" />
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">2.android.pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_dreamsDefaultComponent">com.google.android.deskclock/com.android.deskclock.Screensaver</string>
    <string name="hour_minute_24" formatted="false">%H:%M</string>
    <string name="hour_minute_ampm" formatted="false">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm" formatted="false">%-l:%M%^p</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">HH:mm</string>
    <string name="numeric_date" formatted="false">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="month_day" formatted="false">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="same_year_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s %3$s, %4$s, %5$s – %6$s, %7$s %8$s, %9$s, %10$s</string>
    <string name="same_month_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s, %4$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="same_month_md1_md2">%2$s %3$s – %8$s</string>
    <string name="same_month_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_mdy1_mdy2">%2$s %3$s – %7$s %8$s, %9$s</string>
    <string name="same_month_mdy1_mdy2">%2$s %3$s – %8$s, %9$s</string>
    <string name="same_year_wday1_mdy1_wday2_mdy2">%1$s, %2$s %3$s – %6$s, %7$s %8$s, %9$s</string>
    <string name="short_format_month">%b</string>
    <string name="full_wday_month_day_no_year">EEEE, MMMM d</string>
    <string name="abbrev_wday_month_day_no_year">EEE, MMMM d</string>
    <string name="abbrev_wday_month_day_year">EEE, MMM d, yyyy</string>
    <string name="common_name_prefixes" />
    <string name="common_name_suffixes" />
    <string name="common_last_name_prefixes" />
    <string name="common_name_conjunctions" />
    <string name="default_text_encoding">Latin-1</string>
    <string name="lock_pattern_view_aspect">square</string>
    <string name="time_picker_separator">:</string>
    <string name="byteShort">B</string>
    <string name="kilobyteShort">KB</string>
    <string name="megabyteShort">MB</string>
    <string name="gigabyteShort">GB</string>
    <string name="terabyteShort">TB</string>
    <string name="petabyteShort">PB</string>
    <string name="fileSizeSuffix">%1$s%2$s</string>
    <string name="ellipsis">…</string>
    <string name="ellipsis_two_dots">‥</string>
    <string name="mmiError">Connection problem or invalid MMI code.</string>
    <string name="mmiFdnError">Operation is restricted to fixed dialing numbers only.</string>
    <string name="serviceEnabled">Service was enabled.</string>
    <string name="serviceEnabledFor">Service was enabled for:</string>
    <string name="serviceDisabled">Service has been disabled.</string>
    <string name="serviceRegistered">Registration was successful.</string>
    <string name="serviceErased">Erasure was successful.</string>
    <string name="passwordIncorrect">Incorrect password.</string>
    <string name="mmiComplete">MMI complete.</string>
    <string name="badPin">"The old PIN you typed isn't correct."</string>
    <string name="badPuk">"The PUK you typed isn't correct."</string>
    <string name="mismatchPin">"The PINs you typed don't match."</string>
    <string name="invalidPin">Type a PIN that is 4 to 8 numbers.</string>
    <string name="invalidPuk">Type a PUK that is 8 numbers or longer.</string>
    <string name="needPuk">Your SIM card is PUK-locked. Type the PUK code to unlock it.</string>
    <string name="needPuk2">Type PUK2 to unblock SIM card.</string>
    <string name="enablePin">Unsuccessful. Enable SIM/RUIM Lock.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="ClipMmi">Incoming Caller ID</string>
    <string name="ClirMmi">Outgoing Caller ID</string>
    <string name="CfMmi">Call forwarding</string>
    <string name="CwMmi">Call waiting</string>
    <string name="BaMmi">Call barring</string>
    <string name="PwdMmi">Password change</string>
    <string name="PinMmi">PIN change</string>
    <string name="CnipMmi">Calling number present</string>
    <string name="CnirMmi">Calling number restricted</string>
    <string name="ThreeWCMmi">Three way calling</string>
    <string name="RuacMmi">Rejection of undesired annoying calls</string>
    <string name="CndMmi">Calling number delivery</string>
    <string name="DndMmi">Do not disturb</string>
    <string name="CLIRDefaultOnNextCallOn">Caller ID defaults to restricted. Next call: Restricted</string>
    <string name="CLIRDefaultOnNextCallOff">Caller ID defaults to restricted. Next call: Not restricted</string>
    <string name="CLIRDefaultOffNextCallOn">Caller ID defaults to not restricted. Next call: Restricted</string>
    <string name="CLIRDefaultOffNextCallOff">Caller ID defaults to not restricted. Next call: Not restricted</string>
    <string name="serviceNotProvisioned">Service not provisioned.</string>
    <string name="CLIRPermanent">"You can't change the caller ID setting."</string>
    <string name="RestrictedChangedTitle">Restricted access changed</string>
    <string name="RestrictedOnData">Data service is blocked.</string>
    <string name="RestrictedOnEmergency">Emergency service is blocked.</string>
    <string name="silent_mode_silent">Ringer off</string>
    <string name="silent_mode_ring">Ringer on</string>
    <string name="keyguard_password_enter_puk_prompt">PUK code</string>
    <string name="keyguard_password_enter_pin_prompt">New PIN code</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="oppo_password_controller_btn1">1</string>
    <string name="oppo_password_controller_btn2">2</string>
    <string name="oppo_password_controller_btn3">3</string>
    <string name="oppo_password_controller_btn4">4</string>
    <string name="oppo_password_controller_btn5">5</string>
    <string name="oppo_password_controller_btn6">6</string>
    <string name="oppo_password_controller_btn7">7</string>
    <string name="oppo_password_controller_btn8">8</string>
    <string name="oppo_password_controller_btn9">9</string>
    <string name="oppo_password_controller_btn0">0</string>
    <string name="oppo_power_slient_mode_on_text">Silence</string>
    <string name="oppo_power_airplanemode_text">Flight</string>
    <string name="oppo_power_wlan_mode_text">WLAN</string>
    <string name="oppo_power_netdate_mode_text">NetData</string>
</resources>