<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/oppo_power_dialog_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?listPreferredItemHeight"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:id="@id/option1" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="82.0dip" android:layout_height="fill_parent" android:layout_marginBottom="6.0dip" android:contentDescription="@string/silent_mode_silent">
        <TextView android:textSize="11.0dip" android:textColor="#ff40464b" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/oppo_power_option1_tv_id" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:scaleType="center" android:text="@string/oppo_power_slient_mode_on_text" android:singleLine="true" android:drawableTop="@drawable/oppo_power_silent_mode_on" />
    </LinearLayout>
    <View android:background="@drawable/oppo_power_split_bottom" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="25.0dip" />
    <LinearLayout android:gravity="center" android:id="@id/option2" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="81.0dip" android:layout_height="fill_parent" android:layout_marginBottom="6.0dip">
        <TextView android:textSize="11.0dip" android:textColor="#ff40464b" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/oppo_power_option2_tv_id" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:scaleType="center" android:text="@string/oppo_power_airplanemode_text" android:singleLine="true" android:drawableTop="@drawable/oppo_power_airplane_mode_on" />
    </LinearLayout>
    <View android:background="@drawable/oppo_power_split_bottom" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="25.0dip" />
    <LinearLayout android:gravity="center" android:id="@id/option3" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="81.0dip" android:layout_height="fill_parent" android:layout_marginBottom="6.0dip" android:contentDescription="@string/silent_mode_ring">
        <TextView android:textSize="11.0dip" android:textColor="#ff40464b" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/oppo_power_option3_tv_id" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:scaleType="center" android:text="@string/oppo_power_wlan_mode_text" android:singleLine="true" android:drawableTop="@drawable/oppo_power_wlan_on" />
    </LinearLayout>
    <View android:background="@drawable/oppo_power_split_bottom" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_marginTop="8.0dip" android:layout_marginBottom="25.0dip" />
    <LinearLayout android:gravity="center" android:id="@id/oppo_option4_id" android:background="?actionBarItemBackground" android:focusable="true" android:layout_width="82.0dip" android:layout_height="fill_parent" android:layout_marginBottom="6.0dip" android:contentDescription="@string/silent_mode_ring">
        <TextView android:textSize="11.0dip" android:textColor="#ff40464b" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/oppo_power_option4_tv_id" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:scaleType="center" android:text="@string/oppo_power_netdate_mode_text" android:singleLine="true" android:drawableTop="@drawable/oppo_power_netdate_on" />
    </LinearLayout>
</LinearLayout>