<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.oppo.widget.OppoDigitalLockSreenClock android:id="@id/time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="110.0dip" android:layout_centerHorizontal="true">
            <TextView android:textAppearance="?textAppearanceMedium" android:textSize="18.0dip" android:textColor="#fff1f7ff" android:id="@id/date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:shadowColor="#ff000049" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.1" android:layout_centerHorizontal="true" />
            <TextView android:textAppearance="?textAppearanceMedium" android:textSize="@dimen/keyguard_lockscreen_status_line_font_size" android:ellipsize="marquee" android:id="@id/alarm_status" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="16.0dip" android:singleLine="true" android:drawablePadding="4.0dip" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_marginBottom="14.0dip" android:layout_centerHorizontal="true">
        <TextView android:textAppearance="?textAppearanceMedium" android:textSize="19.0dip" android:textColor="#fff1f7ff" android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@id/status1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:shadowColor="#ff000049" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.1" android:drawablePadding="4.0dip" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/oppo_keyguard_passwordinput" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.oppo.widget.OppoEditText android:textSize="30.0dip" android:textColor="#ff1e1e1e" android:gravity="center" android:layout_gravity="center" android:id="@id/oppo_keyguard_passwordinput1" android:layout_width="75.0dip" android:layout_height="56.0dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="10.0dip" android:maxLength="1" android:inputType="textPassword" android:textCursorDrawable="@null" android:magnifierEnable="false" />
            <com.oppo.widget.OppoEditText android:textSize="30.0dip" android:textColor="#ff1e1e1e" android:gravity="center" android:layout_gravity="center" android:id="@id/oppo_keyguard_passwordinput2" android:layout_width="75.0dip" android:layout_height="56.0dip" android:layout_marginRight="10.0dip" android:maxLength="1" android:inputType="textPassword" android:textCursorDrawable="@null" android:magnifierEnable="false" />
            <com.oppo.widget.OppoEditText android:textSize="30.0dip" android:textColor="#ff1e1e1e" android:gravity="center" android:layout_gravity="center" android:id="@id/oppo_keyguard_passwordinput3" android:layout_width="75.0dip" android:layout_height="56.0dip" android:layout_marginRight="10.0dip" android:maxLength="1" android:inputType="textPassword" android:textCursorDrawable="@null" android:magnifierEnable="false" />
            <com.oppo.widget.OppoEditText android:textSize="30.0dip" android:textColor="#ff1e1e1e" android:gravity="center" android:layout_gravity="center" android:id="@id/oppo_keyguard_passwordinput4" android:layout_width="75.0dip" android:layout_height="fill_parent" android:layout_marginRight="15.0dip" android:maxLength="1" android:inputType="textPassword" android:textCursorDrawable="@null" android:magnifierEnable="false" />
        </LinearLayout>
        <RelativeLayout android:id="@id/keyboard" android:background="@drawable/oppo_lockscreen_keyboard_background" android:paddingLeft="1.0dip" android:paddingTop="0.0dip" android:paddingRight="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_above="@id/emergencyCallButton">
            <ImageButton android:id="@id/oppo_keyguard_button1" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_1" android:text="@string/oppo_password_controller_btn1" android:layout_alignParentLeft="true" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button2" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_2" android:text="@string/oppo_password_controller_btn2" android:layout_toRightOf="@id/oppo_keyguard_button1" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button3" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:src="@drawable/oppo_password_key_3" android:text="@string/oppo_password_controller_btn3" android:layout_toRightOf="@id/oppo_keyguard_button2" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button4" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_4" android:text="@string/oppo_password_controller_btn4" android:layout_below="@id/oppo_keyguard_button1" android:layout_alignParentLeft="true" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button5" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_5" android:text="@string/oppo_password_controller_btn5" android:layout_toRightOf="@id/oppo_keyguard_button4" android:layout_below="@id/oppo_keyguard_button2" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button6" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:src="@drawable/oppo_password_key_6" android:text="@string/oppo_password_controller_btn6" android:layout_toRightOf="@id/oppo_keyguard_button5" android:layout_below="@id/oppo_keyguard_button3" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button7" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_7" android:text="@string/oppo_password_controller_btn7" android:layout_below="@id/oppo_keyguard_button4" android:layout_alignParentLeft="true" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button8" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_8" android:text="@string/oppo_password_controller_btn8" android:layout_toRightOf="@id/oppo_keyguard_button7" android:layout_below="@id/oppo_keyguard_button5" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button9" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:src="@drawable/oppo_password_key_9" android:text="@string/oppo_password_controller_btn9" android:layout_toRightOf="@id/oppo_keyguard_button8" android:layout_below="@id/oppo_keyguard_button6" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button_clear" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_clear_pressed" android:layout_below="@id/oppo_keyguard_button7" android:layout_alignParentLeft="true" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button0" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:src="@drawable/oppo_password_key_0" android:text="@string/oppo_password_controller_btn0" android:layout_toRightOf="@id/oppo_keyguard_button_clear" android:layout_below="@id/oppo_keyguard_button8" style="@style/PasswordTextAppearance" />
            <ImageButton android:id="@id/oppo_keyguard_button_del" android:background="@drawable/oppo_password_key" android:layout_width="356.0px" android:layout_height="65.0dip" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:src="@drawable/oppo_password_key_delete_pressed" android:layout_toRightOf="@id/oppo_keyguard_button0" android:layout_below="@id/oppo_keyguard_button9" style="@style/PasswordTextAppearance" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textAppearance="?textAppearanceMedium" android:textSize="@dimen/keyguard_lockscreen_status_line_font_size" android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@id/carrier" android:layout_width="0.0dip" android:layout_height="0.0dip" android:singleLine="true" android:drawablePadding="4.0dip" />
    <LinearLayout android:gravity="center_horizontal" android:background="@drawable/oppo_lockscreen_keyboard_background" android:layout_width="fill_parent" android:layout_height="65.0dip">
        <Button android:textAppearance="?textAppearanceLarge" android:textSize="20.0dip" android:textColor="#ff191919" android:layout_gravity="right" android:id="@id/emergencyCallButton" android:background="@drawable/oppo_password_key" android:paddingLeft="115.0dip" android:paddingRight="90.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip" android:layout_marginLeft="2.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="2.0dip" android:text="@string/lockscreen_emergency_call" android:layout_weight="1.0" />
    </LinearLayout>
    <RelativeLayout android:layout_gravity="fill" android:id="@id/face_unlock_area_view" android:background="@drawable/intro_bg" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_column="0" android:layout_row="2" android:layout_rowSpan="2" android:layout_columnSpan="1">
        <View android:id="@id/spotlightMask" android:background="@color/facelock_spotlight_mask" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ImageView android:id="@id/cancel_button" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_facial_backup" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
</GridLayout>