<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/topDisplayGroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="27.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/headerText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:singleLine="true" android:shadowColor="#ff000049" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.1" />
        <TextView android:textAppearance="?textAppearanceMedium" android:textColor="@color/white" android:ellipsize="marquee" android:gravity="center" android:id="@id/carrier" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="9.0dip" android:singleLine="true" android:shadowColor="#ff000049" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.1" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="23.0dip">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/pukDisplay" android:background="@drawable/editbox_background" android:layout_width="327.0dip" android:layout_height="56.0dip" android:hint="@string/keyguard_password_enter_puk_prompt" android:maxLines="1" android:maxLength="8" android:inputType="textPassword" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="26.0dip">
                <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/pinDisplay" android:background="@drawable/editbox_background" android:layout_width="327.0dip" android:layout_height="56.0dip" android:hint="@string/keyguard_password_enter_pin_prompt" android:maxLines="1" android:maxLength="8" android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
        <include android:id="@id/keyPad" android:background="@drawable/oppo_lockscreen_keyboard_background" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/oppo_twelve_key_entry" />
        <com.oppo.widget.OppoShortCutIndicators android:id="@id/oppo_unlock_port_shourt_cut_button" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0">
        <Button android:textAppearance="?textAppearanceLarge" android:gravity="center" android:id="@id/emergencyCallButton" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/lockscreen_emergency_call" android:shadowColor="#ddffffff" android:shadowDx="0.0" android:shadowDy="-0.1" android:shadowRadius="0.1" />
    </LinearLayout>
</RelativeLayout>